--- a/just_arrived.css
+++ b/just_arrived.css
@@ -28,7 +28,7 @@ h1 {
   padding: 30px 0 25px 0;
   font-size: 29px;
   text-indent: -9999px;
-  background: transparent url("img/justarrived.png") no-repeat left top;
+  background: transparent url("./justarrived.png") no-repeat left top;
   
 }
 
