--- a/just_arrived.css
+++ b/just_arrived.css
@@ -24,18 +24,35 @@ h1 {
   display: block;
   width: 200px;
   text-align: center;
-  margin: 0 auto;
-  padding: 30px 0 25px 0;
+  margin: 10px auto 30px;
+  padding: 20px 0 0 0;
   font-size: 29px;
   text-indent: -9999px;
-  background: transparent url("./justarrived.png") no-repeat left top;
-  
+  background: transparent url("./justarrived.png") no-repeat left bottom; 
+}
+
+/* for high resolution display */
+
+@media only screen and (min--moz-device-pixel-ratio: 2),
+only screen and (-o-min-device-pixel-ratio: 2/1),
+only screen and (-webkit-min-device-pixel-ratio: 2),
+only screen and (min-device-pixel-ratio: 2) {
+  h1 {
+    background: transparent url("./justarrived2x.png") no-repeat left bottom;
+    background-size: 200px 29px;
+  }
+}
+
+p {
+  font-size: 16px;
+  line-height: 24px;
+  color: #666;
 }
 
 .content{
   margin:0 auto;
   width:300px;
-  padding:0 20px 20px 20px;
+  padding:0 0 20px 0;
   font-weight:lighter;
   text-align:center;
 }
@@ -44,7 +61,8 @@ form {
   position: relative;
   text-align: center;
   margin: 0 auto;
-  padding-bottom: 40px;
+  padding-bottom: 10px;
+  padding-top: 10px;
   width: 286px;
   max-width: 100%;
 }
@@ -53,7 +71,7 @@ label {
   margin-bottom: 2px;
   float: left;
   margin-left: -9px;
-  color: #6e717f;
+  color: #666;
 }
 input[type="text"],
 input[type="email"],
@@ -94,19 +112,26 @@ button {
   display: inline-block;
   vertical-align: middle;
   zoom: 1;
-  padding: 12px 25px 13px 25px;
+  padding: 15px 25px 16px 25px;
   margin-top:10px;
   line-height: 1em;
   font-size: 18px;
   color: #fff;
   border: 0;
   text-shadow: rgba(0,0,0,0.2) 0 -1px 0;
-  background: linear-gradient(#5da4ff,#4589e3),#5aa0fb;
-  background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #5da4ff), color-stop(100%, #4589e3)),#5aa0fb;
+  cursor: pointer;
+/*  background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #5da4ff), color-stop(100%, #4589e3)),#5aa0fb;
   background: -webkit-linear-gradient(#5da4ff,#4589e3),#5aa0fb;
   background: -moz-linear-gradient(#5da4ff,#4589e3),#5aa0fb;
   background: -o-linear-gradient(#5da4ff,#4589e3),#5aa0fb;
-  background: linear-gradient(#5da4ff,#4589e3),#5aa0fb;
+  background: linear-gradient(#5da4ff,#4589e3),#5aa0fb;*/
+  background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #DB5858), color-stop(100%, #BA585E)),#DB5858;
+  background: -webkit-linear-gradient(#DB5858,#BA585E),#DB5858;
+  background: -moz-linear-gradient(#DB5858,#BA585E),#DB5858;
+  background: -o-linear-gradient(#DB5858,#BA585E),#DB5858;
+  background: linear-gradient(#DB5858,#BA585E),#DB5858;
+  width: 314px;
+  margin-left: -14px;
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
   -ms-border-radius: 3px;
@@ -154,19 +179,54 @@ button:active {
   text-decoration:none;
 }
 
+.admin {
+  margin-top: 20px;
+}
+
 .error {
   color:#f47e67;
 }
 
 
 table{
-  border:1px solid #fff;
-  padding:2em;
-  margin:2em auto;
+  border:1px solid #ddd;
+  border-left: 0;
+  border-collapse: separate;
+  border-spacing: 0;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  font-size: 14px;
+  width: 860px;
+  margin-left: -280px;
+}
+table thead {
+  background: #DB5858;
+  color: white;
+}
+table th, table td {
+  padding: 8px;
+  line-height: 24px;
+  text-align: left;
+  vertical-align: top;
+  border-top: 1px solid #ddd;
+  font-weight: 300;
+}
+table th {
+  border-left: 1px solid #ddd;
+  text-align: center;
+}
+table thead:first-child tr:first-child th {
+  border-top: 0;
+}
+table thead:first-child tr:first-child th:first-child {
+  -webkit-border-radius: 4px 0 0 0;
+  -moz-border-radius: 4px 0 0 0;
+  border-radius: 4px 0 0 0;
 }
 
-table td{
-  border-bottom:1px solid #3e464d;
-  padding:1em;
+table thead:first-child tr:first-child th:last-child {
+  -webkit-border-radius: 0 4px 0 0;
+  -moz-border-radius: 0 4px 0 0;
+  border-radius: 0 4px 0 0;
 }
-
