--- a/just_arrived.css
+++ b/just_arrived.css
@@ -19,13 +19,19 @@ body{
   padding:0;
   display:block;
 }
-
 h1 {
+  padding: 5px 0 0 0;
+}
+
+a {
+  color: #DB5858;
+}
+
+h1 a {
   display: block;
   width: 200px;
   text-align: center;
   margin: 10px auto 30px;
-  padding: 20px 0 0 0;
   font-size: 29px;
   text-indent: -9999px;
   background: transparent url("./justarrived.png") no-repeat left bottom; 
@@ -136,7 +142,7 @@ input[type="number"]:focus {
   background-color:#f6fdff;
 }
 
-button {
+button, a.button {
   display: -moz-inline-stack;
   display: inline-block;
   vertical-align: middle;
@@ -149,6 +155,7 @@ button {
   border: 0;
   text-shadow: rgba(0,0,0,0.2) 0 -1px 0;
   cursor: pointer;
+  text-decoration: none;
 /*  background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #5da4ff), color-stop(100%, #4589e3)),#5aa0fb;
   background: -webkit-linear-gradient(#5da4ff,#4589e3),#5aa0fb;
   background: -moz-linear-gradient(#5da4ff,#4589e3),#5aa0fb;
@@ -172,7 +179,12 @@ button {
   -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 
-button:active {
+a.button {
+  width: 200px;
+  margin-left: 0;
+}
+
+button:active, a.button:active {
   -webkit-box-shadow: inset rgba(0,0,0,0.55) 0 1px 5px;
   -moz-box-shadow: inset rgba(0,0,0,0.55) 0 1px 5px;
   box-shadow: inset rgba(0,0,0,0.55) 0 1px 5px;
@@ -189,7 +201,7 @@ button:active {
     z-index: 1;
 }
 
-.footer{
+.footer {
 /*  background-color:#3e464d;
   position:fixed;
   bottom:0;
@@ -203,17 +215,21 @@ button:active {
   width: 300px;
   max-width: 100%;
 }
-.footer a{
+/*.footer a{
   color:#666;
   text-decoration:none;
+}*/
+.footer p {
+  font-size: 12px;
 }
 
 .admin-footer {
   margin-top: 20px;
 }
 
-.error {
-  color:#f47e67;
+.error p {
+  margin-top: 0;
+  color:#DB5858;
 }
 
 
