--- a/just_arrived.css
+++ b/just_arrived.css
@@ -234,8 +234,6 @@ button:active, a.button:active {
 
 
 table{
-  border:1px solid #ddd;
-  border-left: 0;
   border-collapse: separate;
   border-spacing: 0;
   -webkit-border-radius: 4px;
@@ -250,16 +248,42 @@ table thead {
   color: white;
 }
 table th, table td {
-  padding: 8px;
-  line-height: 24px;
+  padding: 0 8px;
   text-align: left;
   vertical-align: top;
-  border-top: 1px solid #ddd;
   font-weight: 300;
+  line-height: inherit;
+  overflow: hidden;
 }
 table th {
   border-left: 1px solid #ddd;
   text-align: center;
+}
+table tbody tr {
+  line-height: 0;
+  overflow: hidden;
+  opacity: 0;
+}
+table td {
+  border-top: 1px solid #ddd;
+}
+table tbody tr:first-child td:first-child {
+  border-radius: 4px 0 0 0;
+}
+table tbody tr:first-child td:last-child {
+  border-radius: 0 4px 0 0;
+}
+table tbody tr:last-child td:last-child {
+  border-radius: 0 0 4px 0;
+}
+table tbody tr:last-child td:first-child {
+  border-radius: 0 0 0 4px;
+}
+table tr:last-child td {
+  border-bottom: 1px solid #ddd;
+}
+table tr td:last-child {
+  border-right: 1px solid #ddd;
 }
 table td {
   border-left: 1px solid #ddd;
